<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">INAF</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">News</string>
    <string name="title_section3">Eventi</string>
    <string name="title_section4">Video</string>
    <string name="title_section5">Apps</string>
    <string name="title_section6">Sedi</string>
    <string name="title_section7">Progetti da Terra</string>
    <string name="title_section8">Progetti Spaziali</string>
    <string name="title_section9">Lavora con noi</string>
    <string name="title_section10">Condividi Tweet</string>
    <string name="navigation_drawer_open">Apri menu di navigazione</string>
    <string name="navigation_drawer_close">Chiudi menu di navigazione</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_feed_list">Feed list</string>
    <string name="title_feed_detail">Feed detail</string>
    <string name="title_video_detail">Video Details</string>
    <string name="image_description">Image</string>
    <string name="action_open_map">Map</string>
    <string name="action_open_webcam">Webcams</string>
    <string name="action_open_credits">Credits</string>
</resources>
