<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/drawer_section_1"
        android:title="@string/title_section1"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/drawer_section_2"
        android:title="@string/title_section2"
        android:icon="@drawable/ic_news"/>
    <item
        android:id="@+id/drawer_section_3"
        android:title="@string/title_section3"
        android:icon="@drawable/ic_events"/>
    <item
        android:id="@+id/drawer_section_4"
        android:title="@string/title_section4"
        android:icon="@drawable/ic_video"/>
    <item
        android:id="@+id/drawer_section_5"
        android:title="@string/title_section5"
        android:icon="@drawable/ic_apps"/>
    <item
        android:id="@+id/drawer_section_6"
        android:title="@string/title_section6"
        android:icon="@drawable/ic_pinpoint"/>
    <item
        android:id="@+id/drawer_section_7"
        android:title="@string/title_section7"
        android:icon="@drawable/ic_telescope"/>
    <item
        android:id="@+id/drawer_section_8"
        android:title="@string/title_section8"
        android:icon="@drawable/ic_satellite"/>
    <item
        android:id="@+id/drawer_section_9"
        android:title="@string/title_section9"
        android:icon="@drawable/ic_jobs"/>
    <item
        android:id="@+id/drawer_section_10"
        android:title="@string/title_section10"
        android:icon="@drawable/ic_share"/>
</group>
</menu>